Use ClasspathUtility.loadInputStream with unamed module + open jrebirth.properties in Sample